# ogre_game

./: .gitignore  CMakeLists.txt  Makefile
src/: main.cpp
